--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-html,body { 
-	height: 100%; 
+html,body {
+	height: 100%;
 }
 
 .global-container{
@@ -13,25 +13,40 @@ html,body {
 form{
 	padding-top: 10px;
 	font-size: 14px;
-	margin-top: 30px;
+	margin-top: 0;
 }
-
+form .avatar {
+	color: #fff;
+	margin: 0 auto 30px;
+	text-align: center;
+	width: 100px;
+	height: 100px;
+	border-radius: 50%;
+	z-index: 9;
+	background: #007BFF;
+	padding: 15px;
+	box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
+}
+form .avatar i {
+	font-size: 62px;
+}
 .card-title{ font-weight:300; }
 
 .btn{
 	font-size: 14px;
-	margin-top:20px;
+	margin-top:0;
 }
 
 
-.login-form{ 
+.login-form{
 	width:330px;
-	margin:20px;
+	margin:0;
 }
 
 
 .alert{
-	margin-bottom:-30px;
+	/*margin-bottom:-30px;*/
 	font-size: 13px;
-	margin-top:20px;
-}	
+	margin-top:0;
+
+}
