--- a/css/login.css
+++ b/css/login.css
@@ -2,58 +2,37 @@ html,body {
 	height: 100%;
 }
 body{
-
+	background-color: #1F5A13;
 }
 .container{
 	background-position: center center;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
 	background-size: cover;
-	background-color: #464646;
+
 }
 .container::before {
 	content: "";
-	background-image: url('img/1920x1080-Hd-Wallpaper-Background.jpg');
 	background-size: cover;
 	position: absolute;
 	top: 0;
 	right: 0;
 	bottom: 0;
 	left: 0;
-	opacity: 70%;
+	background-color: #1F5A13;
+	opacity: 96%;
+
 }
 .global-container{
+	font-family: "Comic Sans MS", sans-serif;
 	height:100%;
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	background-color: #f4f4f4;
 }
 
-form{
-	padding-top: 10px;
-	font-size: 14px;
-	margin-top: 0;
-	margin-bottom: 0;
-	display: block;
-}
-form .avatar {
-	color: #fff;
-	margin: 0 auto 30px;
-	text-align: center;
-	width: 100px;
-	height: 100px;
-	border-radius: 50%;
-	z-index: 9;
-	background: #007BFF;
-	padding: 15px;
-	box-shadow: 0 2px 2px rgba(0, 0, 0, 0.1);
 
-}
-form .avatar i {
-	font-size: 62px;
-}
-#pop, #pop1{
+#pop2, #pop1{
 	display: none;
 	text-align: left;
 }
@@ -69,18 +48,38 @@ form .avatar i {
 	width: 200px;
 }
 
-.card-title{ font-weight:300; }
+.card-title{
+	font-weight:300;
+	font-size: 36px;
+}
 
 .btn{
 	font-size: 14px;
 	margin-top:0;
 }
 .login-form{
-	width:330px;
+	width:460px;
 	margin:0;
 }
 
 .alert{
 	font-size: 13px;
 
+}
+.card-body{
+	background-color: #349721;
+	color: #f4f4f4;
+
+}
+button[type="submit"]{
+	background-color: #ADD5A6;
+	color: #1A4B10;
+}
+input{
+	text-align: center;
+	height: 45px;
+
+}
+input[type="text"],input[type="password"]{
+	font-size: 16px;
 }
